# himadic_crm

./: .gitignore  BAN_GIAO_DEV_IT.md  INSTALL.md  MANIFEST.in  README.md  license.txt  pyproject.toml  requirements.txt  setup.py
docs/: CLOUD_DEPLOYMENT_AND_INTEGRATIONS.md  CRM_HiMedic_BA_TaiLieuPhanTichNghiepVu_v1.docx  CRM_HiMedic_MoTaModule_v1 (1).docx  CRM_HiMedic_UI_Mockup.html
himedic_crm/: boot.py  commands.py  hooks.py  install.py  modules.txt  notifications.py  patches.txt  permissions.py  seed.py
himedic_crm/api/: health.py  lis.py  mobile.py  portal.py  quotation.py  voip.py  webhook.py  zalo.py
himedic_crm/communication/: flows.py  scheduled.py
himedic_crm/contact/: events.py
himedic_crm/contact_and_org/: flows.py
himedic_crm/deal/: events.py  flows.py  rules.py  scheduled.py
himedic_crm/fixtures/: custom_field.json  dashboard.json.disabled  hm_deal_stage.json  hm_lab_test.json  hm_lead_source.json  hm_lead_stage.json  hm_sample_type.json  hm_test_package.json  number_card.json  print_format_manifest.json  print_format_quotation.json  print_format_sample_order.json  role.json  role_profile.json  workflow.json  workflow_action_master.json  workflow_state.json
himedic_crm/lead/: assignment.py  conversion.py  events.py  flows.py  scheduled.py  scoring.py  workflow_patch.py
himedic_crm/logistics/: events.py  flows.py  scheduled.py
himedic_crm/marketing/: flows.py  scheduled.py
himedic_crm/report_and_dashboard/: scheduled.py
himedic_crm/sample/: events.py  flows.py  scheduled.py
himedic_crm/task_and_activity/: flows.py
(+222 files in other folders)
