
[project]
name = "himedic_crm"
version = "1.0.0"
description = "Hi-Medic CRM"
authors = [{ name = "Hi-Medic" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "frappe>=15.0.0,<16.0.0",
    "requests",
    "phonenumbers",
    "qrcode[pil]",
    "python-barcode",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"
